2012-11-14  Ryuan Choi  <ryuan.choi@gmail.com>

        [EFL] Port tiled backing store
        https://bugs.webkit.org/show_bug.cgi?id=71352

        Reviewed by Gyuyoung Kim.

        * EWebLauncher/main.c: Added option to test the WebCore's tiled backing store.
        (_User_Arguments):
        (windowCreate):
        (parseUserArguments):

2012-11-14  Andy Estes  <aestes@apple.com>

        Fix the build.

        * TestWebKitAPI/mac/TestBrowsingContextLoadDelegate.h:

2012-11-14  Dirk Pranke  <dpranke@chromium.org>

        webkitpy: consolidate webkit-base-finding code
        https://bugs.webkit.org/show_bug.cgi?id=102007

        Reviewed by Eric Seidel.

        This patch creates a new "WebKitFinder" class that other
        modules can use to find the top of the WebKit tree and
        commonly used subdirectories. This logic was in the
        webkitpy.layout_test.port classes but wasn't specific to those
        classes and now can be used by other modules without needing a port
        (e.g., by the check-webkit-style python linter).

        This code is somewhat redundant with the code for find_checkout_root()
        in the scm modules, but it does not rely on the presence of a version
        control system to work. This is a requirement for some uses of the
        tree (e.g., Chromium tester checkouts).

        This patch removes most of the logic from the layout_tests.port.config
        module and makes that as private as possible. Now we just need to move
        the default_configuration and flag_from_configuration logic into
        DeprecatedPort (or someplace else appropriate) and we can finish
        getting rid of the Config class (but that is a separate patch).

        * Scripts/webkitpy/common/webkit_finder.py: Added.
        (WebKitFinder):
        (WebKitFinder.__init__):
        (WebKitFinder.webkit_base):
        (WebKitFinder.path_from_webkit_base):
        (WebKitFinder.path_to_script):